# lectoria

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Plan_Proyecto_v2.md  README.md  benchmark.epub  hp.epub  justfile  main.py  pyproject.toml  release-please-config.json  start.sh
.claude/: settings.json
.claude/agents/: clickup-card-creator.md  clickup-ticket-reader.md  codebase-analyzer.md  codebase-locator.md  docs-analyzer.md  docs-locator.md  web-search-researcher.md
.claude/commands/: agent-md-init.md  create_plan.md  implement_plan.md  iterate_plan.md  research_codebase.md  validate_plan.md
.claude/rules/: coding-rules.md  observability.md  pr-creation.md  testing-standards.md  workflow.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
docs/: dev-guide.html  dev-guide.md  onboarding.html  user-guide.html  user-guide.md
docs/adr/: 0001-frontend-streaming-uses-fetch-not-eventsource.md  (+3 more)
docs/agents/: issue-tracker.md  (+1 more)
frontend/: .npmrc  eslint.config.js  package-lock.json  package.json  vite.config.ts
lectoria/: app.py
notebooks/: music_exploration.ipynb
openspec/: config.yaml
scripts/: Untitled  build_music_index.py  create_benchmark_epub.py  download_music.py  test_pipeline.py  whats_next.py
tests/: conftest.py  fakes.py  test_api_books.py  test_api_cors.py  test_api_images.py  test_api_music.py  test_bookstore.py  test_build_index.py  test_image.py  test_llm_json.py  test_music.py  test_narrative.py  test_ncm.py  test_pipeline.py  test_whats_next.py
(+94 files in other folders)
