[project]
name = "lectoria"
version = "0.2.3"
description = "Multimodal EPUB reader with AI-driven narrative enrichment"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "ebooklib",
    "beautifulsoup4",
    "lxml",
    "python-multipart",
    "numpy",
    "sse-starlette",
    "google-genai>=2.10.0,<3",
    "aiohttp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = ["notebooks"]

[tool.ruff.lint.per-file-ignores]
"lectoria/services/ingestion.py" = ["E402"]
"scripts/*" = ["F841"]
